--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/AdrianHenry15/eTrak#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "inquirer": "^8.2.1",
     "mysql2": "^2.3.3"
   }
 }
