--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "console.table": "^0.10.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "figlet": "^1.5.2",
     "inquirer": "^8.2.1",
     "mysql2": "^2.3.3"
   }
